<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_champions"
            android:icon="@drawable/ic_champions_24"
            android:title="@string/menu_champions" />
        <item
            android:id="@+id/nav_equipment"
            android:icon="@drawable/ic_equipment_24"
            android:title="@string/menu_equipment" />
        <item
            android:id="@+id/nav_greathall"
            android:icon="@drawable/ic_ghall_24"
            android:title="@string/menu_greatHall" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_24"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/app_bar_switch"
            android:icon="@drawable/ic_moon_24"
            android:title="@string/action_bright_dark_mode"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />
    </group>
</menu>